ProdIND/ProdPrograms/force-app/main/default/objects/Account/fields/Borrower_customer_code__c.field-meta.xml
<CustomField>
    <fullName>Borrower_customer_code__c</fullName>
    <label>Borrower customer code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>