ProdIND/ProdPrograms/force-app/main/default/objects/Account/fields/BranchBLCode__c.field-meta.xml
<CustomField>
    <fullName>BranchBLCode__c</fullName>
    <label>BranchBLCode</label>
    <length>225</length>
    <type>Text</type>
</CustomField>