ProdIND/ProdPrograms/force-app/main/default/objects/Account/fields/ExternalAccountName__c.field-meta.xml
<CustomField>
    <fullName>ExternalAccountName__c</fullName>
    <externalId>true</externalId>
    <label>ExternalAccountName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>