ProdIND/ProdPrograms/force-app/main/default/objects/Account/fields/RCU_Manager__c.field-meta.xml
<CustomField>
    <fullName>RCU_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RCU Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>