ProdIND/ProdPrograms/force-app/main/default/objects/Account/recordTypes/Individual_Account.recordType-meta.xml
<RecordType>
    <fullName>Individual_Account</fullName>
    <active>true</active>
    <label>Individual Account</label>
</RecordType>